@@ -1358,6 +1358,7 @@
 						<option value="GSL">Groenestroom Lokaal</option>
 						<option value="MDE">Mijndomein Energie</option>
 						<option value="NE">NextEnergy</option>
+						<option value="PE">Pure Energy</option>
 						<option value="TI">Tibber</option>
 						<option value="VDB">Vandebron</option>
 						<option value="VON">Vrij op naam</option>
@@ -1372,8 +1373,6 @@
 				<td>
 					<select id="providerGas" name="providerGas" style="width:200px" class="combobox ui-corner-all">
 						<option value="EGSI">Stock EGSI</option>
-						<option value="AA">Atoom Alliantie</option>
-						<option value="AIP">All in power</option>
 						<option value="ANWB">ANWB Energie</option>
 						<option value="BE">Budget Energie</option>
 						<option value="EE">EasyEnergy</option>
@@ -1384,10 +1383,10 @@
 						<option value="GSL">Groenestroom Lokaal</option>
 						<option value="MDE">Mijndomein Energie</option>
 						<option value="NE">NextEnergy</option>
+						<option value="PE">Pure Energy</option>
 						<option value="VDB">Vandebron</option>
 						<option value="VON">Vrij op naam</option>
 						<option value="WE">Wout Energie</option>
-						<option value="ZG">ZonderGas</option>
 						<option value="ZP">Zonneplan</option>
 					</select>
 				</td>
